--- a/index.html
+++ b/index.html
@@ -281,7 +281,71 @@
   </div>
 </section>
 <!-- =====================================End Of Client Review===============================  -->
+<section class="faq h-100 py-5">
+  <h1 class="fw-bold text-center  p-10">Frequently Asked Questions</h1><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                difference between event design and event planning
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Event design encompasses the more creative side of event management.</strong> While a planner focuses on organization, we focus on the decor of the event. From draping to lighting, furniture, and centerpieces, it is our job to ensure your event is truly stunning.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Difference between service and duty
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>As nouns the difference between service and duty</strong> As nouns the difference between service and duty
+                is that service is an act of being of assistance to someone or service can be service tree while duty is that which one is morally or legally obligated to do.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+               Why we best in Market
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Its very very simple.We have 200 Staffs</strong>  We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
+              </div>
+            </div>
+          </div>
 
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Why should we hire you answer example?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>“Over the years, We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <img src="images/people.png" alt="">
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <!-- =======================================ALL SECTIONS END==========================================  -->
 <footer class="text-center py-4 mt-5" style="background-color:#2c2b2b; color: WHITE;" >
