--- a/index.html
+++ b/index.html
@@ -47,19 +47,26 @@
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> 
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 3"></button> 
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <img src="images/slider/1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
+                      <h5 class="text-red">First slide label</h5>
                       <p>Some representative placeholder content for the first slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <img src="images/slider/2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/slider/3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
                       <p>Some representative placeholder content for the second slide.</p>
@@ -136,7 +143,8 @@
     </div>
 </section>
 <!-- Down Banar Ends  -->
-<section class="dpackagrs h-100 py-5">
+
+<section class="packages h-100 py-5">
  <h1 class="fw-bold text-center  p-10">Our Packages</h1><br>
   <div class="container mt-10 d-flex align-items-center justify-content space-between">
     <div class="row">
@@ -164,8 +172,8 @@
        <div class="col-lg-3 col-md-4 col-sm-6 text-left ">
         <div class="card border-light ">
           <div class="card-body">
-            <h2>$300</h2>
-            <h5 class="card-title"> Business Pack</h5>
+            <h2>$500</h2>
+            <h5 class="card-title"> Wedding Pack</h5>
             <p class="card-text">With supporting as a natural Environment for Special Business.</p>
             <ul>
               <li><i class="fas fa-check-circle"></i>A third item-1</li>
@@ -187,8 +195,8 @@
    
     <div class="card-body">
       <div class="position-absolute top-0 start-100 translate-middle"><span class="badge rounded-pill bg-danger p-2 fw-bold">Hot</span></div>
-      <h2>$300</h2>
-      <h5 class="card-title"> Business Pack</h5>
+      <h2>$700</h2>
+      <h5 class="card-title"> Medium Business Pack</h5>
       <p class="card-text">With supporting as a natural Environment for Special Business.</p>
       <ul>
         <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
@@ -207,8 +215,8 @@
  <div class="col-lg-3 col-md-4 col-sm-6 text-left ">
   <div class="card border-light ">
     <div class="card-body">
-      <h2>$300</h2>
-      <h5 class="card-title"> Business Pack</h5>
+      <h2>$1000</h2>
+      <h5 class="card-title">Large Business Pack</h5>
       <p class="card-text">With supporting as a natural Environment for Special Business.</p>
       <ul>
         <li><i class="fas fa-check-circle"></i>A third item-one</li>
@@ -280,34 +288,35 @@
     </div>
   </div>
 </section>
+
 <!-- =====================================End Of Client Review===============================  -->
 <section class="faq h-100 py-5">
-  <h1 class="fw-bold text-center  p-10">Frequently Asked Questions</h1><br>
+  <h1 class="fw-bold text-center p-10">Frequently Asked Questions</h1><br>
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-12">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                difference between event design and event planning
+                <strong>Difference between event design and event planning</strong>
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Event design encompasses the more creative side of event management.</strong> While a planner focuses on organization, we focus on the decor of the event. From draping to lighting, furniture, and centerpieces, it is our job to ensure your event is truly stunning.
+                <strong class="text-danger">Event design encompasses the more creative side of event management.</strong> While a planner focuses on organization, we focus on the decor of the event. From draping to lighting, furniture, and centerpieces, it is our job to ensure your event is truly stunning.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Difference between service and duty
+               <strong> Difference between service and duty</strong>
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>As nouns the difference between service and duty</strong> As nouns the difference between service and duty
+                <strong class="text-danger">As nouns the difference between service and duty</strong> As nouns the difference between service and duty
                 is that service is an act of being of assistance to someone or service can be service tree while duty is that which one is morally or legally obligated to do.
               </div>
             </div>
@@ -315,25 +324,25 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-               Why we best in Market
+               <strong>Why we best in Market</strong>
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Its very very simple.We have 200 Staffs</strong>  We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
+                <strong class="text-danger">Its very very simple.We have 200 Staffs</strong>  We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
               </div>
             </div>
           </div>
 
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Why should we hire you answer example?
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+               <strong> Why should we hire you answer example?</strong>
               </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>“Over the years, We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
+                <strong class="text-danger">“Over the years, We have acquired relevant skills and experience</strong> which I shall bring to your organization. I have also worked tirelessly on my communication abilities and teamwork skills, which I will put to use in my future career, which would be in your organization if I am selected for the position.
               </div>
             </div>
           </div>
@@ -344,12 +353,91 @@
       </div>
     </div>
   </div>
-
 </section>
+
+<!-- Gallery -->
+<section class="dpackagrs h-100 py-5">
+  <div class="container">
+   <h1 class="text-center"> Select Your Choice</h1>
+    <hr class="mt-2 mb-5">
+    <div class="row text-center text-lg-start">
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/1.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/2.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/3.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/4.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/5.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/6.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/7.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/8.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/9.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/10.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/11.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-6">
+        <a href="#" class="d-block mb-4 h-100">
+          <img height="350px" width="400px" class="img-fluid img-thumbnail" src="images/galery/12.jpg" alt="">
+        </a>
+      </div>
+    </div>
+  
+  </div>
+  </section>
+  <!-- Gallery -->
 
 <!-- =======================================ALL SECTIONS END==========================================  -->
 <footer class="text-center py-4 mt-5" style="background-color:#2c2b2b; color: WHITE;" >
-  <small class="text-WHITE fw-bold">&copy;Copyright: 2022 All rights reserved by Masud Rana</small>
+  <div class="row d-flex align-items-center">
+    <div class="col-lg-6">
+      <h6 class="text-WHITE fw-bold">&copy;Copyright: 2022 All rights reserved by Masud Rana</h6>
+    </div>
+    <div class="col-lg-6">
+      <h4 class="text-black-40">Get the App</h4>
+      <img height="100px" src="images/app-stor.png" alt="">
+    </div>
+  </div>
 </footer>
     <!-- bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
