--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   </div>
                   <div class="carousel-item">
                     <img src="images/slider/2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none ">
                       <h5>Second slide label</h5>
                       <p>Some representative placeholder content for the second slide.</p>
                     </div>
@@ -156,12 +156,12 @@
             <h5 class="card-title"> Business Pack</h5>
             <p class="card-text">With supporting as a natural Environment for Special Business.</p>
             <ul>
-              <li><i class="fas fa-check-circle"></i>A third item-1</li>
-              <li><i class="fas fa-check-circle"></i>A third item-2</li>
-              <li><i class="fas fa-check-circle"></i>A third item-3</li>
-              <li><i class="fas fa-check-circle"></i>A third item-4</li>
-              <li><i class="fas fa-check-circle"></i>A third item-3</li>
-              <li><i class="fas fa-check-circle"></i>A third item-4</li>
+              <li><i class="fas fa-check-circle"></i>Limited Space Access</li>
+              <li><i class="fas fa-check-circle"></i>Security Facility</li>
+              <li><i class="fas fa-check-circle"></i>Event Support</li>
+              <li><i class="fas fa-check-circle"></i>Decoration Design</li>
+              <li><i class="fas fa-check-circle"></i>Per day Bill</li>
+              <li><i class="fas fa-check-circle"></i>50% Advance Payment</li>
             </ul>
             <a href="#" class="btn-higtlight">Choose Plan</a>
           </div>
@@ -176,12 +176,12 @@
             <h5 class="card-title"> Wedding Pack</h5>
             <p class="card-text">With supporting as a natural Environment for Special Business.</p>
             <ul>
-              <li><i class="fas fa-check-circle"></i>A third item-1</li>
-              <li><i class="fas fa-check-circle"></i>A third item-2</li>
-              <li><i class="fas fa-check-circle"></i>A third item-3</li>
-              <li><i class="fas fa-check-circle"></i>A third item-4</li>
-              <li><i class="fas fa-check-circle"></i>A third item-3</li>
-              <li><i class="fas fa-check-circle"></i>A third item-4</li>
+              <li><i class="fas fa-check-circle"></i>Medium Space Access</li>
+              <li><i class="fas fa-check-circle"></i>Security Facility</li>
+              <li><i class="fas fa-check-circle"></i>Event Support </li>
+              <li><i class="fas fa-check-circle"></i>Professional Decoration</li>
+              <li><i class="fas fa-check-circle"></i>Per day Bill</li>
+              <li><i class="fas fa-check-circle"></i>30% Advance Payment</li>
             </ul>
             <a href="#" class="btn-higtlight">Choose Plan</a>
           </div>
@@ -199,12 +199,12 @@
       <h5 class="card-title"> Medium Business Pack</h5>
       <p class="card-text">With supporting as a natural Environment for Special Business.</p>
       <ul>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-one-two</li>
+              <li><i class="fas fa-check-circle"></i>Large Space Access</li>
+              <li><i class="fas fa-check-circle"></i>Security with CCTV</li>
+              <li><i class="fas fa-check-circle"></i>Full Event Support</li>
+              <li><i class="fas fa-check-circle"></i>Excellent Decoration </li>
+              <li><i class="fas fa-check-circle"></i>Per day Bill</li>
+              <li><i class="fas fa-check-circle"></i>20% Advance Payment</li>
       </ul>
       <a href="#" class="btn-higtlight">Choose Plan</a>
     </div>
@@ -219,12 +219,12 @@
       <h5 class="card-title">Large Business Pack</h5>
       <p class="card-text">With supporting as a natural Environment for Special Business.</p>
       <ul>
-        <li><i class="fas fa-check-circle"></i>A third item-one</li>
-        <li><i class="fas fa-check-circle"></i>A third item-two</li>
-        <li><i class="fas fa-check-circle"></i>A third item-three</li>
-        <li><i class="fas fa-check-circle"></i>A third item-4</li>
-        <li><i class="fas fa-check-circle"></i>A third item-3</li>
-        <li><i class="fas fa-check-circle"></i>A third item-4</li>
+        <li><i class="fas fa-check-circle"></i>Very Large Space Access</li>
+        <li><i class="fas fa-check-circle"></i>Security  with IP Camera</li>
+        <li><i class="fas fa-check-circle"></i>Full Event Support</li>
+        <li><i class="fas fa-check-circle"></i>Excellent Decoration </li>
+        <li><i class="fas fa-check-circle"></i>Per day Bill</li>
+        <li><i class="fas fa-check-circle"></i>No Advance Payment</li>
       </ul>
       <a href="#" class="btn-higtlight">Choose Plan</a>
     </div>
