--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 <!-- Gallery -->
 <section class="dpackagrs h-100 py-5">
   <div class="container">
-   <h1 class="text-center"> Select Your Choice</h1>
+   <h1 class="text-center"> Photo Gallery</h1>
     <hr class="mt-2 mb-5">
     <div class="row text-center text-lg-start">
       <div class="col-lg-3 col-md-4 col-6">
